# RPG

./: CMakeLists.txt
Data/Levels/: Debug.lvl
Data/Maps/: Dungeon.tmx
Data/Scenes/: test.xml
Data/Shaders/: basic.frag  basic.vert  map.frag  map.vert  spriteBatch.frag  spriteBatch.vert  spriteBatchBorder.frag  texture_lit_procedural.frag  texture_lit_procedural.vert  texturedGouraud.frag  texturedGouraud.vert  texturedLit.frag  texturedLit.vert  ttf.frag  ttf.vert  unlit_textured.frag  unlit_textured.vert
Data/Tilesets/: Dungeon.tsx
include/: bullet.h  camera.h  enemies.h  game.h  input.h  keyState.h  level.h  map.h  menu.h  mouseState.h  platform.h  player.h  renderState.h  rendering.h  resourceLoader.h  shader.h  sprite.h  spriteBatch.h  stb_image.h  stb_image_write.h  structures.h  texture.h  tileSheet.h  ttf.h  utils.h  vectorMath.h  vector_math.h
include/comp/: animation.h  level.h  mapTile.h
src/: camera.cpp  key_state.cpp  main.cpp  mouseState.cpp  platform.cpp  rendering.cpp  shader.cpp  spriteBatch.cpp  texture.cpp
src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
