project(Pong)
cmake_minimum_required(VERSION 3.15)
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_subdirectory(deps/SDL2-2.0.10)
add_subdirectory(deps/freetype-2.10.0)
include_directories(Pong include deps deps/freetype-2.10.0)
add_executable(Pong src/main.cpp deps/SDL_ttf.c deps/SDL_FontCache.c)
target_link_libraries(Pong SDL2-static freetype)
file(COPY fonts/ DESTINATION Debug/fonts)
