project(RPG)
cmake_minimum_required(VERSION 3.15)
include (InstallRequiredSystemLibraries)
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_subdirectory(deps/SDL2-2.0.10)
add_subdirectory(deps/freetype-2.10.0)
add_subdirectory(deps/glew-2.1.0/build/cmake)
add_subdirectory(deps/glm)
add_compile_definitions(IMGUI_IMPL_OPENGL_LOADER_GLEW)
include_directories(RPG include deps deps/freetype-2.10.0 deps/glew-2.1.0/include/GL include/imgui deps/glew-2.1.0/include)
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp")
add_executable(RPG ${SOURCES} deps/SDL_ttf.c)
target_link_libraries(RPG SDL2-static freetype glew_s)
file(COPY fonts/ DESTINATION Debug/fonts)
install(TARGETS RPG RUNTIME DESTINATION bin COMPONENT applications)
install(DIRECTORY "${PROJECT_SOURCE_DIR}/fonts/" DESTINATION bin/fonts COMPONENT applications)
if( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS )
    install( PROGRAMS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION bin COMPONENT System )
endif( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS )
set (CPACK_NSIS_MODIFY_PATH "ON")
set(CPACK_COMPONENT_APPLICATIONS_DISPLAY_NAME "RPG")
set(CPACK_PACKAGE_NAME "RPG")
set(CPACK_PACKAGE_VENDOR "abramowitzk@gmail.com")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "RPG Game")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "RPG")
set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
set(CPACK_COMPONENTS_ALL applications System files)
# This must always be last!
include(CPack)
