project(RPG)
cmake_minimum_required(VERSION 3.15)
include (InstallRequiredSystemLibraries)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(GLEW_USE_STATIC_LIBS "TRUE")
add_subdirectory(deps/SDL2-2.0.10)
add_subdirectory(deps/freetype-2.10.0)
add_subdirectory(deps/glew-2.1.0/build/cmake)
add_subdirectory(deps/glm)
add_subdirectory(deps/tmxlite-1.1.0/tmxlite)
add_compile_definitions(IMGUI_IMPL_OPENGL_LOADER_GLEW)
add_compile_definitions(MUSIC_WAV)
include_directories(RPG include include/mixer deps deps/freetype-2.10.0 deps/glew-2.1.0/include/GL include/imgui deps/glew-2.1.0/include deps/tmslite-1.1.0/tmxlite/include)
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp")
file(GLOB_RECURSE SOURCES2 RELATIVE ${CMAKE_SOURCE_DIR} "src/*.c")
add_executable(RPG ${SOURCES} ${SOURCES2})
target_link_libraries(RPG SDL2-static freetype glew_s tmxlite)
add_custom_command(TARGET RPG POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory "${PROJECT_SOURCE_DIR}/Data/" $<TARGET_FILE_DIR:RPG>/Data)
install(TARGETS RPG RUNTIME DESTINATION bin COMPONENT applications)
install(DIRECTORY "${PROJECT_SOURCE_DIR}/Data/" DESTINATION bin/Data COMPONENT applications)
if( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS )
    install( PROGRAMS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION bin COMPONENT System )
endif( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS )
IF(WIN32)
    set(CPACK_GENERATOR WIX)
    set(CPACK_PACKAGE_EXECUTABLES RPG;RPG.exe)
    ENDIF(WIN32)
set(CPACK_COMPONENT_APPLICATIONS_DISPLAY_NAME "RPG")
set(CPACK_PACKAGE_NAME "RPG")
set(CPACK_PACKAGE_VENDOR "abramowitzk@gmail.com")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "RPG Game")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "RPG")
set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
set(CPACK_COMPONENTS_ALL applications System files)
# This must always be last!
include(CPack)
